--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
                         </select>
                     </div>
 
+                    <div class="form-group">
+                        <label for="type">File format</label>
+                        <select id="type" class="form-control">
+                            <option value="tiff">TIFF</option>
+                            <option value="pdf" selected="selected">PDF</option>
+                        </select>
+                    </div>
+
                     <label for="brightness">Brightness</label>
                     <input id="brightness" type="text" class="form-control" />
                     <div id="brightness_slider" class="slider"></div>
